--- a/sources/setup.cfg
+++ b/sources/setup.cfg
@@ -18,6 +18,13 @@ django_settings_module = config.settings
 # Django migrations should not produce any errors:
 ignore_errors = True
 
+[tool:pytest]
+DJANGO_SETTINGS_MODULE=config.settings
+env =
+    DJANGO_ENV=test
+python_files = tests.py test_*.py
+python_paths = app
+
 [coverage:run]
 omit = *migrations*, *tests*
 plugins =
