--- a/sources/.pre-commit-config.yaml
+++ b/sources/.pre-commit-config.yaml
@@ -19,6 +19,6 @@ repos:
     rev: 3.8.3
     hooks:
       - id: flake8
-        args: ["--per-file-ignores=*settings/*:F821", "--max-line-length=120"]
+        args: ["--max-line-length=120"]
         exclude: '.tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules'
         additional_dependencies: [flake8-isort]
